solution/k3d/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: llm-server
  template:
    metadata:
      labels:
        app: llm-server
    spec:
      containers:
        - name: llm-slim
          # TODO: Update with your slim image tag (e.g. localhost:5000/llm-slim:latest)
          image: #TODO <YOUR_IMAGE_HERE>
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          # TODO: Load environment variables from the ConfigMap 'llm-config', this setting is for the rolling update part
          # envFrom:
          # - configMapRef:
          #     name: ...

          resources:
            # TODO: This limit is intentionally too low to trigger an OOMKilled error!
            # After observing the crash, change this to a normal limit (e.g., "800Mi")
            limits:
              memory: "50Mi"
            requests:
              cpu: "100m"
              memory: "200Mi"
          # TODO: Mount the hostPath volume containing the model weights here! store it inside the k3d server
          volumeMounts:
          # - name: ...
          #   mountPath: ...

      # TODO: Define the hostPath volume here, this allows the container has the access to the model weight path inside the k3d server
      volumes:
      # - name: ...
      #   hostPath:
      #     path: /model_data
