solution/k3d/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-server
spec:
  type: ClusterIP
  selector:
    app: llm-server
  ports:
  - port: 80
    targetPort: 8080
